<?xml version="1.0"?>
<package format="2">
    <name>detect_area_distance</name>
    <version>0.0.1</version>
    <description>detect area distance</description>

    <maintainer email="matsumoto_k@araya.org">Keita Matsumoto</maintainer>
    
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>laser_geometry</depend>
    <depend>message_filters</depend>
    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>

    <test_depend>roslint</test_depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
